--- a/resume.css
+++ b/resume.css
@@ -16,6 +16,11 @@
 .msg a { margin-left: 20px; background: #408814; color: white; padding: 4px 8px; text-decoration: none; }
 .msg a:hover { background: #266400; }
 
+@media print {
+    @page { margin: 0; }
+    body { margin: 1.6cm; }
+  }
+
 /* //-- yui-grids style overrides -- */
 body { 
     font-family: Garamond;
